--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -28,6 +28,7 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756810.md#1" target="_blank">两只胖海狮跳上小船玩耍 差点沉船</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756810.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-180337385-150x120.jpg" align ="left"></a>美国华盛顿州日前上演有趣的一幕：两只体型庞大的海狮跳上一艘小船玩耍，看起来很享受的样子，但它们可能不知道自己沉重的身体让小船倾斜一边，几乎要沉船了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 1:25 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11748796.md#1" target="_blank">寻找好玩的元素 增加孩子登山健行乐趣</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11748796.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191228_sally_play_01-150x120.jpg" align ="left"></a>登山健行，对孩子来说，最重要的就是一条有趣好玩的路线，可以让他们在活动中找到欢乐；而一条景色优美的路线，是让父母享受旅程的重要元素，也可让成人放松平时工作紧绷的神经；一条充满冒险的路线，可以让全家人经历千辛万苦后，一起享有达成目标的成就感。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 11:09 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756258.md#1" target="_blank">卧床不动易长褥疮 中医如何治疗？4方法预防</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756258.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/bed-sore3_572190847-150x120.jpg" align ="left"></a>褥疮，又称压疮、压力性溃疡，往往是因为年长者或病人长期卧床、坐轮椅，无法改变姿势，所以身体的骨头突起处持续受到压迫、摩擦等而出现皮肤病变。最常长褥疮的地方包括尾椎、臀部、肩背部等。中医称褥疮为“席疮”。如何用中药和外敷方法治疗褥疮？如何预防皮肤长出褥疮？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 6:41 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756229.md#1" target="_blank">胃不舒服，可能是肝病？如何判断</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756229.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_794065012-150x120.jpg" align ="left"></a>临床上，有些人出现消化道方面的症状，如恶心、胃痛、食欲不振等，怀疑是胃有毛病，吃了胃药后却不见效果，到医院进一步检查，结果发现是肝脏出了问题。肝病为何引发胃部不适？出现胃部不适是得了肝病还是胃病？家医科医师林旭华提供初步判断方法......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 4:11 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762251.md#1" target="_blank">民调：2019卑首次购房者多依赖父母</a><br></h3>本周一公布的这项调查显示，现在的首次购房者比以往任何时候都更有可能向父母要求首付现金，虽然只有8％的首次购房者从父母那里获得了一半以上的首付，而2015年这一比例为19％。
+报告指出：“尽管有更多的首次购房者获得了经济上的帮助，但他们似乎在过去四年中所获得的首付比例较低。”59％的公证人说，他们的客户通常可（从父母那.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 7:48 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2008_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ublry267/djy/blob/master/gb/news2008.md#1<br><a href="https://github.com/ublry267/djy/blob/master/gb/news2008.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ublry267/djy/blob/master/gb/news2008.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008.htm">http://www.epochtimes.com/gb/news2008.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
